tests/errors/test_12.x
// For condition is not boolean

fn main() -> i64 {

    let mut i: i64 = 0;
    for ; i ; i += 1 {

    }

}